--- a/Styles/Index.css
+++ b/Styles/Index.css
@@ -282,6 +282,47 @@ body {
   display: none;
 }
 
+@media only screen and (max-width: 880px) {
+  .modelCont_dataCon {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .modelCont_video {
+    width: 90%;
+    height: 50vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0px;
+  }
+  .modelCont_video_discription {
+    width: 86%;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 10px;
+  }
+  .video_title {
+    font-size: 4vw;
+  }
+  .video_titlePara {
+    font-size: 3vw;
+  }
+  .video_titleOfdesInst {
+    font-size: 3vw;
+  }
+  .video_ingre {
+    font-size: 2.5vw;
+  }
+  .video_inst {
+    font-size: 2.5vw;
+  }
+  .video_closeBtn {
+    right: 1%;
+    top: 8%;
+    background-color: #e74c3c;
+    border-radius: 21%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   #randomMealCon {
     flex-direction: column;
@@ -322,44 +363,6 @@ body {
   }
   .category_data h3 {
     font-size: 2vw;
-  }
-  .modelCont_dataCon {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .modelCont_video {
-    width: 90%;
-    height: 50vh;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 0px;
-  }
-  .modelCont_video_discription {
-    width: 86%;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 10px;
-  }
-  .video_title {
-    font-size: 4vw;
-  }
-  .video_titlePara {
-    font-size: 3vw;
-  }
-  .video_titleOfdesInst {
-    font-size: 3vw;
-  }
-  .video_ingre {
-    font-size: 2.5vw;
-  }
-  .video_inst {
-    font-size: 2.5vw;
-  }
-  .video_closeBtn {
-    right: 1%;
-    top: 8%;
-    background-color: #e74c3c;
-    border-radius: 21%;
   }
 }
 
